--- a/src/AbatabLieutenant/Properties/Resources.resx
+++ b/src/AbatabLieutenant/Properties/Resources.resx
@@ -120,7 +120,7 @@
   <data name="AbatabDeploymentRoot" xml:space="preserve">
     <value>C:\AvatoolWebService\Abatab_UAT</value>
   </data>
-  <data name="CustomRepository" xml:space="preserve">
+  <data name="CustomBranch" xml:space="preserve">
     <value>23.2</value>
   </data>
   <data name="LtntRoot" xml:space="preserve">
